Update modules table